Use pointer events to fix mouse over
Mouse over and click weren't working on hte white key tops because they were hidden by the black key div, they work now though.

--- a/piano/piano.css
+++ b/piano/piano.css
@@ -7,16 +7,20 @@
   height: 100%;
   width: 100%;
   position: absolute;
+  pointer-events: none;
 }
 
 .black-keys {
   height: 70%;
   width: 100%;
   position: absolute;
+  pointer-events: none;
 }
 
 .black-key-blank, .piano-key {
   float: left;
+  position: relative;
+  pointer-events: auto;
 }
 
 .white-keys .white-key {
